# vex

./: README.md  meson.build  meson_options.txt
scripts/: meson.build  video-encoder
tests/: meson.build  test-sdl.cc  test-timestamp.cc  test-video-writer.cc  tests.h  vex-demo1.cc
vex/: ArgManager.h  Color.h  FFMpegCommon.h  TextBox.cc  TextBox.h  Timestamp.cc  Timestamp.h  VideoPlayer.cc  VideoPlayer.h  VideoReader.cc  VideoReader.h  VideoWriter.cc  VideoWriter.h  blend2d-support.h  config.h.in  meson.build  parse_utils.h  vex.h  vex_version.h.in
